[gd_scene format=3 uid="uid://1oh2s8qqs7nx"]

[ext_resource type="Script" uid="uid://dn7u3ga65pvud" path="res://Creatures/Simple_Player/interface/pause_menu/pause_menu.gd" id="1_rtx5m"]
[ext_resource type="Texture2D" uid="uid://dkjel002c60if" path="res://Texture/yes/menu window.png" id="2_ixgt7"]
[ext_resource type="AudioStream" uid="uid://dm2qmoepvtmrn" path="res://Sound/test/jixaw-metal-pipe-falling-sound.mp3" id="2_mxhwk"]

[node name="pause_menu" type="Control" unique_id=98772429]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rtx5m")

[node name="Container" type="HBoxContainer" parent="." unique_id=1735348620]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control3" type="Control" parent="Container" unique_id=23643346]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Control3" unique_id=2107469805]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="Container/Control3/VBoxContainer" unique_id=1733468267]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="NinePatchRect" parent="Container/Control3/VBoxContainer" unique_id=802282462]
custom_minimum_size = Vector2(0, 290)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_ixgt7")
region_rect = Rect2(24.528381, 22.112564, 454.16406, 454.16406)
patch_margin_left = 32
patch_margin_top = 38
patch_margin_right = 41
patch_margin_bottom = 33

[node name="MarginContainer" type="MarginContainer" parent="Container/Control3/VBoxContainer/ColorRect" unique_id=509442880]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -93.5
offset_right = 143.5
offset_bottom = 93.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer" unique_id=430325619]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Pause" type="Label" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer" unique_id=364999788]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "PAUSE_PAUSE"

[node name="Control" type="Control" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer" unique_id=715139786]
layout_mode = 2

[node name="Control2" type="Control" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer" unique_id=1738116012]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer" unique_id=184590740]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Sound" type="Button" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer" unique_id=729945816]
layout_mode = 2
action_mode = 0
text = "PAUSE_FUNNY_SOUND"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer/Sound" unique_id=54348424]
stream = ExtResource("2_mxhwk")
bus = &"Sound_Effects"

[node name="MarginContainer2" type="MarginContainer" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer" unique_id=1334445687]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Continue" type="Button" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer2" unique_id=546647912]
layout_mode = 2
text = "PAUSE_CONTINUE"

[node name="MarginContainer3" type="MarginContainer" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer" unique_id=943996042]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="Restart" type="Button" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer3" unique_id=1139234090]
layout_mode = 2
text = "PAUSE_RESTART"

[node name="MarginContainer5" type="MarginContainer" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer" unique_id=471357799]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="CONTROL" type="Button" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer5" unique_id=1883677839]
layout_mode = 2
text = "PAUSE_SETTINGS"

[node name="MarginContainer4" type="MarginContainer" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer" unique_id=1393552422]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer4" unique_id=1098812946]
layout_mode = 2

[node name="Quit" type="Button" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer" unique_id=217488757]
layout_mode = 2
size_flags_horizontal = 3
text = "PAUSE_QUIT_DESKTOP"

[node name="Quit2" type="Button" parent="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer" unique_id=162179574]
layout_mode = 2
size_flags_horizontal = 3
text = "PAUSE_QUIT_MENU"

[node name="Control4" type="Control" parent="Container/Control3/VBoxContainer" unique_id=1435791156]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1355855601]
stream = ExtResource("2_mxhwk")
bus = &"Sound_Effects"

[connection signal="pressed" from="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer2/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer3/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer5/CONTROL" to="." method="_on_control_pressed"]
[connection signal="pressed" from="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer5/CONTROL" to="." method="_on_ost_pressed"]
[connection signal="pressed" from="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Container/Control3/VBoxContainer/ColorRect/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/Quit2" to="." method="_on_quit_2_pressed"]
